updated login page and register page

--- a/frontend/src/pages/Shared/ForgetPassword.css
+++ b/frontend/src/pages/Shared/ForgetPassword.css
@@ -1,14 +1,14 @@
-.Login {
+.ForgetPassword {
     max-width: 300px;
     margin: 100px auto;
     background-color: #ffffff;
-    border: 1px solid #000000;
+    border: 1px solid #1b1818;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-family: "DM Sans", sans-serif;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
-.Login p {
+.ForgetPassword p {
     font-size: 14px;
     text-align: left;
     font-family: "DM Sans", sans-serif;
@@ -30,12 +30,12 @@ h2 {
 
 .form-group {
     font-size: 14px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
-.club-email {
-    text-align: left;
+.form-group label {
     margin-left: 20px;
+    text-align: left;
     margin-bottom: 5px;
     font-weight: bold;
 }
@@ -43,14 +43,13 @@ h2 {
 .form-group input {
     text-align: left;
     width: 80%;
-    margin-left: 20px;
     padding: 8px;
     border: 1px solid #ccc;
 }
 
 .form-group button {
     text-align: center;
-    margin-left: 90px;
+    margin-left: 0px;
     width: 40%;
     padding: 15px;
     background-color: #0d99ff;
