--- a/frontend/src/pages/Shared/LoginPage.css
+++ b/frontend/src/pages/Shared/LoginPage.css
@@ -2,10 +2,10 @@
     max-width: 300px;
     margin: 100px auto;
     background-color: #ffffff;
-    border: 1px solid #000000;
+    border: 1px solid #1b1818;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-family: "DM Sans", sans-serif;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
 .Name {
@@ -41,14 +41,18 @@ h2 {
 
 .form-group button {
     margin-top: 30px;
+    margin-left: auto;
     width: 50%;
     padding: 15px;
     background-color: #0d99ff;
     border: 1px solid #ccc;
-    border-radius: 12px;
     color: #ffffff;
     font-weight: bold;
     cursor: pointer;
+}
+
+.form-group button:hover {
+    background-color: #00ad17;
 }
 
 .forgetpassword {
@@ -60,8 +64,4 @@ h2 {
     color: #555555;
     font-size: 14px;
     cursor: pointer;
-}
-
-.form-group button:hover {
-    background-color: #0d99ff;
 }
