--- a/frontend/src/pages/Shared/LoginPage.css
+++ b/frontend/src/pages/Shared/LoginPage.css
@@ -6,6 +6,12 @@
     border-radius: 10px;
     font-family: "DM Sans", sans-serif;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+
+    .errorMessage {
+        color: red
+    }
+
+    ;
 }
 
 .Name {
