added error message should submit fail for log in or forget password

--- a/frontend/src/pages/Shared/LoginPage.css
+++ b/frontend/src/pages/Shared/LoginPage.css
@@ -8,10 +8,12 @@
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 
     .errorMessage {
-        color: red
+        color: rgb(162, 29, 29);
     }
-
-    ;
+    .input-error {
+        background-color: #FFCDD2;
+    }
+    
 }
 
 .Name {
