--- a/frontend/src/pages/Shared/ForgetPassword.css
+++ b/frontend/src/pages/Shared/ForgetPassword.css
@@ -6,6 +6,12 @@
     border-radius: 10px;
     font-family: "DM Sans", sans-serif;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    .errorMessage {
+        color: rgb(162, 29, 29);
+    }
+    .input-error {
+        background-color: #FFCDD2;
+    }
 }
 
 .ForgetPassword p {
