--- a/frontend/src/pages/Shared/ForgetPassword.css
+++ b/frontend/src/pages/Shared/ForgetPassword.css
@@ -1,71 +1,91 @@
-.ForgetPassword {
-    max-width: 300px;
-    margin: 100px auto;
+/* Global styles */
+
+.MainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+  }
+  
+  .Name {
+    font-family: "DM Sans", sans-serif;
+    font-size: 20px;
+    text-align: center;
+  }
+  
+  h2 {
+    font-size: 32px;
+    margin-bottom: 10px;
+    text-align: center; 
+  }
+  
+  /* ForgetPassword module */
+  
+  .ForgetPassword {
+    width: 300px;
+    margin: 10px auto;
     background-color: #ffffff;
     border: 1px solid #1b1818;
     border-radius: 10px;
     font-family: "DM Sans", sans-serif;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-    .errorMessage {
-        color: rgb(162, 29, 29);
-    }
-    .input-error {
-        background-color: #FFCDD2;
-    }
-}
-
-.ForgetPassword p {
-    font-size: 14px;
+  }
+  
+  .ForgetPassword .errorMessage {
+    color: rgb(162, 29, 29);
+  }
+  
+  .ForgetPassword .input-error {
+    background-color: #FFCDD2;
+  }
+  
+  .ForgetPassword p {
+    font-size: 14px;    
     text-align: left;
     font-family: "DM Sans", sans-serif;
     width: 90%;
     margin-left: 20px;
     margin-bottom: 20px;
-}
-
-.Name {
-    font-family: "DM Sans", sans-serif;
-    font-size: 20px;
-}
-
-h2 {
-    font-size: 32px;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-.form-group {
+  }
+  
+  /* Form group module */
+  
+  .form-group {
     font-size: 14px;
+    margin-bottom: 20px;
+    text-align: left;
+  }
+  
+  .form-group label {
+    text-align: left;
+    display: block;
     margin-bottom: 5px;
-}
-
-.form-group label {
     margin-left: 20px;
-    text-align: left;
-    margin-bottom: 5px;
     font-weight: bold;
-}
-
-.form-group input {
-    text-align: left;
-    width: 80%;
+  }
+  
+  .form-group input {
+    width: 60%;
     padding: 8px;
     border: 1px solid #ccc;
-}
-
-.form-group button {
+  }
+  
+  .form-group button {
     text-align: center;
-    margin-left: 0px;
     width: 40%;
     padding: 15px;
+    margin-left: auto;
     background-color: #0d99ff;
     border: 1px solid #ccc;
     border-radius: 12px;
     color: #ffffff;
     font-weight: bold;
     cursor: pointer;
-}
-
-.form-group button:hover {
+  }
+  
+  .form-group button:hover {
     background-color: #0d99ff;
-}
+  }
+  
