--- a/frontend/src/pages/Shared/LoginPage.css
+++ b/frontend/src/pages/Shared/LoginPage.css
@@ -1,24 +1,31 @@
 .Login {
-    max-width: 300px;
-    margin: 100px auto;
+    width: 300px;
+    margin: 10px auto;
     background-color: #ffffff;
     border: 1px solid #1b1818;
     border-radius: 10px;
     font-family: "DM Sans", sans-serif;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-
     .errorMessage {
         color: rgb(162, 29, 29);
     }
     .input-error {
         background-color: #FFCDD2;
     }
-    
+}
+.MainContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 .Name {
     font-family: "DM Sans", sans-serif;
     font-size: "20px";
+    text-align: center;
 }
 
 h2 {
@@ -58,6 +65,7 @@ h2 {
     font-weight: bold;
     cursor: pointer;
 }
+
 
 .form-group button:hover {
     background-color: #00ad17;
