fixing login dimensions

--- a/frontend/src/pages/Shared/ForgetPassword.css
+++ b/frontend/src/pages/Shared/ForgetPassword.css
@@ -1,24 +1,22 @@
 /* Global styles */
 
-.MainContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100vw;
-  }
-  
   .Name {
     font-family: "DM Sans", sans-serif;
     font-size: 20px;
-    text-align: center;
   }
   
   h2 {
     font-size: 32px;
     margin-bottom: 10px;
     text-align: center; 
+  }
+  .MainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
   }
   
   /* ForgetPassword module */
@@ -54,29 +52,29 @@
   
   .form-group {
     font-size: 14px;
-    margin-bottom: 20px;
-    text-align: left;
+    margin-bottom:10px;
   }
   
   .form-group label {
+    margin-left:20px;
     text-align: left;
     display: block;
     margin-bottom: 5px;
-    margin-left: 20px;
     font-weight: bold;
   }
   
   .form-group input {
-    width: 60%;
+    margin-left:20px;
+    width: 80%;
     padding: 8px;
     border: 1px solid #ccc;
   }
   
   .form-group button {
-    text-align: center;
+    margin-left:90px;
+    text-align: center; 
     width: 40%;
     padding: 15px;
-    margin-left: auto;
     background-color: #0d99ff;
     border: 1px solid #ccc;
     border-radius: 12px;
@@ -86,6 +84,6 @@
   }
   
   .form-group button:hover {
-    background-color: #0d99ff;
+    background-color: #00ad17;
   }
   
