--- a/frontend/src/pages/Shared/LoginPage.css
+++ b/frontend/src/pages/Shared/LoginPage.css
@@ -7,6 +7,7 @@
     font-family: "DM Sans", sans-serif;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     .errorMessage {
+        margin-left:50px;
         color: rgb(162, 29, 29);
     }
     .input-error {
@@ -37,7 +38,6 @@ h2 {
 .form-group {
     font-size: 14px;
     margin-bottom: 20px;
-    text-align: center;
 }
 
 .form-group label {
@@ -49,14 +49,15 @@ h2 {
 }
 
 .form-group input {
+    margin-left: 50px;
     width: 60%;
     padding: 8px;
     border: 1px solid #ccc;
 }
 
 .form-group button {
+    margin-left: 70px;
     margin-top: 30px;
-    margin-left: auto;
     width: 50%;
     padding: 15px;
     background-color: #0d99ff;
