--- a/frontend/src/pages/Shared/LoginPage.css
+++ b/frontend/src/pages/Shared/LoginPage.css
@@ -1,3 +1,4 @@
+
 .Login {
     width: 300px;
     margin: 10px auto;
@@ -82,3 +83,13 @@ h2 {
     font-size: 14px;
     cursor: pointer;
 }
+
+.bg{
+    background-image: url(../../assets/images/backgrounds/bg2.svg);
+    background-size:cover;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+};
