--- a/frontend/src/pages/Shared/ForgetPassword.css
+++ b/frontend/src/pages/Shared/ForgetPassword.css
@@ -86,4 +86,17 @@
   .form-group button:hover {
     background-color: #00ad17;
   }
+  .bg {
+    background-image: url(../../assets/images/backgrounds/bg2.svg);
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
   
