--- a/frontend/src/pages/Shared/ResetPassword.css
+++ b/frontend/src/pages/Shared/ResetPassword.css
@@ -21,7 +21,7 @@
   
   /* ForgetPassword module */
   
-  .ForgetPassword {
+  .ResetPassword {
     width: 300px;
     margin: 10px auto;
     background-color: #ffffff;
@@ -31,15 +31,15 @@
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
   }
   
-  .ForgetPassword .errorMessage {
+  .ResetPassword .errorMessage {
     color: rgb(162, 29, 29);
   }
   
-  .ForgetPassword .input-error {
+  .ResetPassword .input-error {
     background-color: #FFCDD2;
   }
   
-  .ForgetPassword p {
+  .ResetPassword p {
     font-size: 14px;    
     text-align: left;
     font-family: "DM Sans", sans-serif;
@@ -71,9 +71,9 @@
   }
   
   .form-group button {
-    margin-left:90px;
+    margin-left:60px;
     text-align: center; 
-    width: 40%;
+    width: 60%;
     padding: 15px;
     background-color: #0d99ff;
     border: 1px solid #ccc;
@@ -86,4 +86,18 @@
   .form-group button:hover {
     background-color: #00ad17;
   }
+  
+  .bg {
+    background-image: url(../../assets/images/backgrounds/bg2.svg);
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
   
