--- a/frontend/src/pages/Shared/ResetPassword.css
+++ b/frontend/src/pages/Shared/ResetPassword.css
@@ -22,6 +22,7 @@
   /* ForgetPassword module */
   
   .ResetPassword {
+    margin-top:10px;
     width: 300px;
     margin: 10px auto;
     background-color: #ffffff;
